--- a/index.css
+++ b/index.css
@@ -129,7 +129,7 @@ body {
   flex-direction: column;
   align-items: center;
   height: fit-content;
-  transition: 3s;
+  /* transition: 3s; */
 }
 
 .title h3 {
@@ -214,7 +214,7 @@ body {
   font-family: inherit;
   font-weight: 400;
   cursor: pointer;
-  transition: all 0.3s;
+  /* transition: all 0.3s; */
   padding: 0.5rem 1rem;
 }
 
@@ -290,7 +290,58 @@ body {
   filter: blur(20px);
 }
 .feature-img {
-  transition: 1s;
+  /* transition: 1s; */
+}
+.section3 {
+  height: fit-content;
+  justify-content: center;
+}
+.slider-in-section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 3rem;
+}
+.slider {
+  width: 830px;
+  height: 467px;
+  display: flex;
+  position: relative;
+  overflow: hidden;
+}
+.slide {
+  position: absolute;
+  transition: 0.8s ease-out;
+}
+.slide img {
+  max-width: 100%;
+  height: 467px;
+  width: 830px;
+}
+.slider-icon {
+  z-index: 40;
+  background-color: white;
+  width: 55px;
+  height: 55px;
+  display: grid;
+  place-items: center;
+  border-radius: 50%;
+  margin: 0 2rem;
+}
+.dots {
+  display: flex;
+  width: fit-content;
+  margin-top: 2rem;
+}
+.dot {
+  width: 0.65rem;
+  height: 0.65rem;
+  border-radius: 50%;
+  background-color: #b9b9b9;
+  margin: 0 0.5rem;
+}
+.active-dot {
+  background-color: #888;
 }
 @media (max-width: 950px) {
   .features img {
@@ -318,5 +369,11 @@ body {
   }
   .nav {
     padding: 0 1rem;
+  }
+  .slider {
+    width: 700px;
+  }
+  .slide img {
+    width: 700px;
   }
 }
