--- a/index.css
+++ b/index.css
@@ -129,7 +129,7 @@ body {
   flex-direction: column;
   align-items: center;
   height: fit-content;
-  /* transition: 3s; */
+  transition: 1.5s;
 }
 
 .title h3 {
@@ -214,7 +214,7 @@ body {
   font-family: inherit;
   font-weight: 400;
   cursor: pointer;
-  /* transition: all 0.3s; */
+  transition: all 0.3s;
   padding: 0.5rem 1rem;
 }
 
@@ -273,6 +273,7 @@ body {
 .close-icon svg {
   fill: var(--color-tertiary-darker);
 }
+
 .sticky-nav {
   /* used */
   position: fixed;
@@ -290,11 +291,12 @@ body {
   filter: blur(20px);
 }
 .feature-img {
-  /* transition: 1s; */
+  transition: 1.9s;
 }
 .section3 {
   height: fit-content;
   justify-content: center;
+  position: relative;
 }
 .slider-in-section {
   display: flex;
@@ -308,12 +310,22 @@ body {
   display: flex;
   position: relative;
   overflow: hidden;
+  margin: 0 1.7rem;
+  align-items: center;
 }
 .slide {
   position: absolute;
   transition: 0.8s ease-out;
 }
-.slide img {
+.section3::before {
+  content: '\201C';
+  position: absolute;
+  font-size: 12rem;
+  top: 16rem;
+  left: 28rem;
+  color: var(--color-primary);
+}
+.slide .slide-img {
   max-width: 100%;
   height: 467px;
   width: 830px;
@@ -331,7 +343,6 @@ body {
 .dots {
   display: flex;
   width: fit-content;
-  margin-top: 2rem;
 }
 .dot {
   width: 0.65rem;
@@ -343,6 +354,79 @@ body {
 .active-dot {
   background-color: #888;
 }
+.slide h1,
+.user-info h1 {
+  font-weight: 500;
+}
+.user img {
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
+  margin-right: 2rem;
+}
+.user {
+  display: flex;
+  align-items: center;
+}
+.slide p,
+.user-info h2 {
+  color: #888;
+}
+
+.slide p {
+  margin-bottom: 2rem;
+  letter-spacing: 0.9px;
+}
+.user-info h1 {
+  font-size: 1.2rem;
+}
+.user-info h2 {
+  font-size: 1rem;
+  font-weight: 400;
+}
+.section4 {
+  background-color: #37383d;
+  color: white;
+  padding: 10rem 31rem;
+}
+.section4 h1 {
+  font-size: 2.5rem;
+  letter-spacing: 2.5px;
+}
+.section4 button {
+  background-color: var(--color-primary);
+  height: 4rem;
+  padding: 0 3rem;
+  border-radius: 2rem;
+  font-size: 1.5rem;
+  border: none;
+  margin-top: 2rem;
+}
+.section4 button:hover {
+  background-color: var(--color-primary-darker);
+}
+footer {
+  width: 100%;
+  height: 20rem;
+  background-color: #37383d;
+  display: grid;
+  flex-direction: column;
+  place-items: center;
+  padding: 5rem;
+}
+.footer-links {
+  list-style: none;
+  display: flex;
+  margin-bottom: 2rem;
+}
+.footer-links li {
+  margin-right: 3.5rem;
+}
+.footer-links li a {
+  text-decoration: none;
+  color: white;
+}
+
 @media (max-width: 950px) {
   .features img {
     height: 19rem;
@@ -373,7 +457,13 @@ body {
   .slider {
     width: 700px;
   }
-  .slide img {
+  .slide .slide-img {
     width: 700px;
+  }
+  .section3::before {
+    left: 3rem;
+  }
+  .footer-links li {
+    margin-right: 2rem;
   }
 }
